# mobile_qt_ffmpeg_example

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: main.cpp
